# advent-of-visualizations

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
2025/: index.html
advent_of_visualizations/: __init__.py
advent_of_visualizations/aoc2025/: day04.py  day07.py  day08.py  day08_plotly.py  day08_pyvista.py  day09.py
advent_of_visualizations/utils/: __init__.py  colormap.py  pattern.py
docs/: 2025.md  index.md
search/: search_index.json
src/advent_of_visualizations/app/: __init__.py  advent_of_visualizations.py  controls.py  playback_controls.py  puzzle_selector.py  styles.tcss
src/advent_of_visualizations/puzzles/: base_puzzle.py
src/advent_of_visualizations/utils/: __init__.py
src/advent_of_visualizations/visualizations/: base_puzzle.py  puzzle.py  puzzle_status.py  reversible_puzzle.py
src/advent_of_visualizations/visualizations/aoc2024/: __init__.py  day01.py
src/advent_of_visualizations/visualizations/aoc2025/: day04.py
src/advent_of_visualizations/visualizations/aoc2025/inputs/: day04.txt
src/advent_of_visualizations/visualizations/mixins/: __init__.py  reverse_mixin.py  speed_control_mixin.py  step_backward_mixin.py  step_forward_mixin.py  toggle_play_mixin.py
