[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-visualizations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "click<=8.2.1",
    "mkdocs-material>=9.7.0",
]
